Rework getting params in endpoint

--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -8,5 +8,6 @@
 <p>Hello!</p>
 
 <a href="/first/goodbye">To goodbye page</a> or <a href="/second/exit">Exit</a>
+<a href="/first/hello?name=Dwayne&surname=Johnson">Request with parameters</a>
 </body>
 </html>
