Create calculator endpoint

--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -9,5 +9,7 @@
 
 <a href="/first/goodbye">To goodbye page</a> or <a href="/second/exit">Exit</a>
 <a href="/first/hello?name=Dwayne&surname=Johnson">Request with parameters</a>
+
+<p th:text="${message}" />
 </body>
 </html>
