--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -5,5 +5,12 @@
 </head>
 <body>
 <p th:text="${person.getName()}" />
+<p th:text="${person.getId()}" />
+
+<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
+
+<form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
+    <button type="submit">Delete!</button>
+</form>
 </body>
 </html>
