Add age and email fields and validate forms

--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <div th:each="person : ${people}">
-    <a th:text="${person.getName()}" th:href="@{/people/{id}(id=${person.getId()})}" />
+    <a th:text="${person.getName() + ', ' + person.getAge()}" th:href="@{/people/{id}(id=${person.getId()})}" />
 </div>
 
 <br>
