--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -8,7 +8,16 @@
 
 <form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
     <label for="name">Enter name: </label>
-    <input type="text" th:field="*{name}" id="name">
+    <input type="text" th:field="*{name}" id="name" />
+    <small style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</small>
+    <br>
+    <label for="age">Enter age: </label>
+    <input type="text" th:field="*{age}" id="age" />
+    <small style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age error</small>
+    <br>
+    <label for="email">Enter email: </label>
+    <input type="text" th:field="*{email}" id="email" />
+    <small style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</small>
     <br>
     <button type="submit">Update!</button>
 </form>
