--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -6,6 +6,8 @@
 <body>
 <p th:text="${person.getName()}" />
 <p th:text="${person.getId()}" />
+<p th:text="${person.getAge()}" />
+<p th:text="${person.getEmail()}" />
 
 <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 
